# gr-symbolmapping

./: .gitignore  .zenodo.json  CHANGELOG.md  CMakeLists.txt  Dockerfile  MANIFEST.md  README.md  symbolmapping.pc.in
.ci_support/: linux_64_python3.10.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____cpython.yaml  osx_64_python3.10.____cpython.yaml  osx_64_python3.11.____cpython.yaml  osx_64_python3.8.____cpython.yaml  osx_64_python3.9.____cpython.yaml  win_64_python3.10.____cpython.yaml  win_64_python3.8.____cpython.yaml  win_64_python3.9.____cpython.yaml
.conda/: README.md  conda-forge.yml
.conda/recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
.github/workflows/: check-formatting.yml  conda-build.yml  run-test.yml
.scripts/: build_steps.sh
apps/: CMakeLists.txt
cmake/Modules/: symbolmappingConfig.cmake
docs/: CMakeLists.txt  README.symbolmapping
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py  update_pydoc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: .gitignore  interleaver_demo.grc  interleaver_demo.py  symbol_mapping_demo.grc  symbol_mapping_demo.py
grc/: CMakeLists.txt  symbolmapping_interleaver.block.yml  symbolmapping_symbol_demapper_cf.block.yml  symbolmapping_symbol_mapper_bc.block.yml
include/symbolmapping/: CMakeLists.txt  api.h  bit_interleaver.h  interleaver.h  symbol_demapper_cf.h  symbol_mapper.h  symbol_mapper_bc.h
lib/: CMakeLists.txt  bit_interleaver.cc  interleaver_impl.cc  interleaver_impl.h  symbol_demapper_cf_impl.cc  symbol_demapper_cf_impl.h  symbol_mapper.cc  symbol_mapper_bc_impl.cc  symbol_mapper_bc_impl.h
python/: CMakeLists.txt  __init__.py  interleaver_indices.py  latex_plot_magic.py  qa_interleaver.py  qa_python_bindings.py  qa_symbol_demapper_cf.py  qa_symbol_mapper_bc.py  ref_constellation.py  symbol_constellation.py  symbol_demapper.py
python/bindings/: CMakeLists.txt  bit_interleaver_python.cc  interleaver_python.cc  python_bindings.cc  symbol_demapper_cf_python.cc  symbol_mapper_bc_python.cc  symbol_mapper_python.cc
python/bindings/docstrings/: interleaver_pydoc_template.h  symbol_demapper_cf_pydoc_template.h  symbol_mapper_bc_pydoc_template.h
swig/: CMakeLists.txt  symbolmapping_swig.i
